src/snapshots/ruff__linter__tests__D210_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: NoSurroundingWhitespace
  location:
    row: 288
    column: 4
  end_location:
    row: 288
    column: 33
  fix:
    patch:
      content: Whitespace at the end.
      location:
        row: 288
        column: 7
      end_location:
        row: 288
        column: 30
- kind: NoSurroundingWhitespace
  location:
    row: 293
    column: 4
  end_location:
    row: 293
    column: 37
  fix:
    patch:
      content: Whitespace at everywhere.
      location:
        row: 293
        column: 7
      end_location:
        row: 293
        column: 34
- kind: NoSurroundingWhitespace
  location:
    row: 299
    column: 4
  end_location:
    row: 302
    column: 7
  fix:
    patch:
      content: Whitespace at the beginning.
      location:
        row: 299
        column: 7
      end_location:
        row: 299
        column: 36

