src/snapshots/ruff__linter__tests__D211_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    NoBlankLineBeforeClass: 1
  location:
    row: 170
    column: 4
  end_location:
    row: 170
    column: 29
  fix:
    patch:
      content: ""
      location:
        row: 169
        column: 0
      end_location:
        row: 170
        column: 0
- kind:
    NoBlankLineBeforeClass: 1
  location:
    row: 181
    column: 4
  end_location:
    row: 181
    column: 24
  fix:
    patch:
      content: ""
      location:
        row: 180
        column: 0
      end_location:
        row: 181
        column: 0

